Fix missaligned  containers

--- a/src/components/Container/index.module.css
+++ b/src/components/Container/index.module.css
@@ -1,7 +1,8 @@
 .roundSquare {
   /*width: fit-content;*/
-  display: inline-flex;
+  display: flex;
   background: rgba(255, 255, 255, 0.03);
   border-radius: 1rem;
   padding: 1rem;
+  align-items: center;
 }
