--- a/src/components/Instruction/index.module.css
+++ b/src/components/Instruction/index.module.css
@@ -11,6 +11,7 @@
 
 .title {
   margin-top: auto;
+  margin-bottom: auto;
   margin-left: 1rem;
 }
 
